Adapt package name changing in meta.claim.mgt package.
Conflicts:
	pom.xml
	portal/osgi-services/org.wso2.is.portal.user.client.api/pom.xml
	portal/osgi-services/org.wso2.is.portal.user.client.api/src/main/java/org/wso2/is/portal/user/client/api/ProfileMgtClientService.java

--- a/product/pom.xml
+++ b/product/pom.xml
@@ -141,7 +141,7 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.identity.mgt</groupId>
-            <artifactId>org.wso2.carbon.identity.meta.claim.mgt.feature</artifactId>
+            <artifactId>org.wso2.carbon.identity.claim.feature</artifactId>
             <type>zip</type>
         </dependency>
 
@@ -459,7 +459,7 @@
 =======
                                 <artifactItem>
                                     <groupId>org.wso2.carbon.identity.mgt</groupId>
-                                    <artifactId>org.wso2.carbon.identity.meta.claim.mgt.feature</artifactId>
+                                    <artifactId>org.wso2.carbon.identity.claim.feature</artifactId>
                                     <version>${org.wso2.carbon.identity.mgt.version}</version>
                                     <type>zip</type>
                                 </artifactItem>
@@ -624,7 +624,7 @@
                                     <version>${org.wso2.carbon.identity.mgt.version}</version>
                                 </feature>
                                 <feature>
-                                    <id>org.wso2.carbon.identity.meta.claim.mgt.feature</id>
+                                    <id>org.wso2.carbon.identity.claim.feature</id>
                                     <version>${org.wso2.carbon.identity.mgt.version}</version>
                                 </feature>
                                 <feature>
@@ -948,7 +948,7 @@
                                     <version>${org.wso2.carbon.identity.mgt.version}</version>
                                 </feature>
                                 <feature>
-                                    <id>org.wso2.carbon.identity.meta.claim.mgt.feature</id>
+                                    <id>org.wso2.carbon.identity.claim.feature</id>
                                     <version>${org.wso2.carbon.identity.mgt.version}</version>
                                 </feature>
                                 <feature>
