Added the complete flow with delete.
Conflicts:
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/public/js/security-questions.js
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.js
	portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/public/css/user-portal.css
	product/carbon-home/conf/identity/challenge-questions/en_US.yaml
	product/carbon-home/resources/h2-test-data/test-data.sql

--- a/product/carbon-home/conf/identity/domain-config.yaml
+++ b/product/carbon-home/conf/identity/domain-config.yaml
@@ -120,6 +120,15 @@ domains:
       -
         attribute: "version"
         claimUri: "http://wso2.org/claims/version"
+      -
+        attribute: "challengeQuestionUris"
+        claimUri: "http://wso2.org/claims/challengeQuestionUris"
+      -
+        attribute: "challengeQuestion1"
+        claimUri: "http://wso2.org/claims/challengeQuestion1"
+      -
+        attribute: "challengeQuestion2"
+        claimUri: "http://wso2.org/claims/challengeQuestion2"
 
     credentialStoreConnectors:
     -
