Fixing https://wso2.org/jira/browse/IDENTITY-5632

--- a/product/carbon-home/conf/identity/profile-mapping.yaml
+++ b/product/carbon-home/conf/identity/profile-mapping.yaml
@@ -38,13 +38,13 @@ profiles:
    displayName: "First Name"
    required: true
    readonly: false
-   regex: ".*"
+   regex: "^[a-zA-Z]*$"
   -
    claimURI: "http://wso2.org/claims/lastname"
    displayName: "Last Name"
    required: false
    readonly: false
-   regex: ".*"
+   regex: "^[a-zA-Z]*$"
   -
    claimURI: "http://wso2.org/claims/email"
    displayName: "Email"
@@ -57,7 +57,7 @@ profiles:
    displayName: "Telephone"
    required: false
    readonly: false
-   regex: ".*"
+   regex: "^(?=.*[0-9])[- +()0-9]+$"
    dataType: "text"
  -
   profileName: "employee"
