--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/app.yaml
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/app.yaml
@@ -1,4 +1,4 @@
-theme : "org.wso2.carbon.uuf.common.theme.default.theme"
+theme : "org.wso2.carbon.uuf.common.default.theme"
 #menus :
 #  main :
 #    Home : {link: "", icon: "fw-home"}
